--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="https://www.linkedin.com/in/%D9%85%D8%AD%D9%85%D9%88%D8%AF-%D8%B9%D9%84%D9%8A-a99713237/" title="linkedin" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://github.com/mahmoudAliaboElhassan" title="github" target="_blank"><i class="fa-brands fa-github"></i></a>
         </div>
-        <a href="" class="btn">message me</a>
+        <a href=" mailto:ml6893254@gmail.com" class="btn"> message me</a>
     </div>
 </body>
 
